--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
 }
 
 .add {
-  background-color: #9ec862;
+  background-color: #16b3c7;
   color: #fff;
   position: fixed;
   top: 1rem;
@@ -34,7 +34,7 @@ body {
 }
 
 .note .tools {
-  background-color: #93c862;
+  background-color: #16b3c7;
   display: flex;
   justify-content: flex-end;
   padding: 0.5rem;
